<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_category_title"
        android:id="@+id/addCategoryHeader"
        android:layout_weight="0.05"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_name"
        android:id="@+id/addCatNameDesc"
        android:paddingBottom="@dimen/design_tab_text_size"
        android:paddingLeft="8sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCategoryName"
        android:layout_weight="0.05"
        android:textAlignment="center"
        android:padding="4sp"
        android:hint="@string/add_category_default"
        android:inputType="text"
        android:singleLine="true"
        android:maxLength="60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_color"
        android:id="@+id/addCategoryColor"
        android:paddingBottom="@dimen/design_tab_text_size"
        android:paddingTop="@dimen/design_tab_text_size"
        android:paddingLeft="8sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCatHexColor"
        android:textAlignment="center"
        android:padding="4sp"
        android:hint="@string/add_category_color_default"
        android:singleLine="true"
        android:clickable="true"
        android:layout_weight="0.05"
        android:editable="false"
        android:inputType="none"
        android:onClick="selectColor" />

    <Button
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:id="@+id/addCatComplete"
        android:layout_gravity="bottom|right"
        android:layout_weight="0.08"
        android:onClick="onConfirm" />

</LinearLayout>